--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Contat Manager</string>
+    <string name="app_name">Contact Manager</string>
     <string name="Adicionar">Adicionar</string>
 </resources>
